--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,11 @@ build-backend = "setuptools.build_meta"
 where = ["src"]
 
 [tool.setuptools.package-data]
-mypkg = ["*.fbd.j2"]
+mypkg = ["*.j2"]
 
 [project]
 name = "simpleccx"
-version = "0.0.5"
+version = "0.0.6"
 authors = [
   { name="Ronald Grefhorst", email="ronald@rgde.be" },
 ]
